--- a/2020/2020-05/2020-05-21_2/source/black/300x250.css
+++ b/2020/2020-05/2020-05-21_2/source/black/300x250.css
@@ -842,8 +842,8 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 320px;
-  height: 50px;
+  width: 300px;
+  height: 250px;
   display: block;
 }
 
@@ -883,55 +883,63 @@
 }
 
 .logo {
-  background: url('./images/320x50_logo.png') no-repeat center center;
+  background: url('./images/300x250_logo.png') no-repeat center center;
   background-size: 100% auto;
+}
+.bg {
+  background: url('./images/300x250_bg.jpg') no-repeat center center;
+  background-size: 100% auto;
+}
+.cta {
+  background: url('./images/300x250_cta.png') no-repeat center center;
+  background-size: 100% auto;
+}
+.cta-text {
+  background: url('./images/300x250_cta_text.png') no-repeat center center;
+  background-size: 100% auto;
+  
+  -webkit-transform-origin: 210px 217px;
+  -moz-transform-origin: 210px 217px;
+  transform-origin: 210px 217px;
+}
+
+.content-wrapper.animation .logo {
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
-.bg {
-  background: url('./images/320x50_bg.jpg') no-repeat center center;
-  background-size: 100% auto;
+.content-wrapper.animation .bg {
   -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
   animation: fadeIn 0.75s ease-in-out 0.75s forwards;
 }
-.product {
-  background: url('./images/320x50_product.png') no-repeat center center;
-  background-size: 100% auto;
-  -webkit-animation: fadeIn 0.75s ease-in-out 1.25s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 1.25s forwards;
-  animation: fadeIn 0.75s ease-in-out 1.25s forwards;
+.content-wrapper.animation .cta-container {
+  -webkit-animation: fadeIn 0.75s ease-in-out 2s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 2s forwards;
+  animation: fadeIn 0.75s ease-in-out 2s forwards;
 }
-.cta-container {
-  -webkit-animation: fadeIn 0.75s ease-in-out 1.75s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 1.75s forwards;
-  animation: fadeIn 0.75s ease-in-out 1.75s forwards;
-}
-.product-container {
-  background-size: 100% auto;
-  -webkit-animation: fadeOut 0.75s ease-in-out 3.5s forwards;
-  -moz-animation: fadeOut 0.75s ease-in-out 3.5s forwards;
-  animation: fadeOut 0.75s ease-in-out 3.5s forwards;
-}
-.text {
-  background: url('./images/320x50_text.png') no-repeat center center;
-  background-size: 100% auto;
-  -webkit-animation: fadeIn 0.75s ease-in-out 4s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 4s forwards;
-  animation: fadeIn 0.75s ease-in-out 4s forwards;
-}
-.cta {
-  background: url('./images/320x50_cta.png') no-repeat center center;
-  background-size: 100% auto;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  
-  -webkit-transform-origin: 262px 25px;
-  -moz-transform-origin: 262px 25px;
-  transform-origin: 262px 25px;
-
+.content-wrapper.animation .cta-text {
   -webkit-animation: zoomInOut 1.75s ease-in-out 5s infinite;
   -moz-animation: zoomInOut 1.75s ease-in-out 5s infinite;
   animation: zoomInOut 1.75s ease-in-out 5s infinite;
+}
+
+.text {
+  background: url('./images/300x250_text.png') no-repeat center center;
+  background-size: 100% auto;
+}
+.product {
+  background: url('./images/300x250_product.png') no-repeat center center;
+  background-size: 100% auto;
+}
+.frame.animation .text, .frame.animation .product {
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+}
+
+.frame.animation {
+  -webkit-animation: fadeOut 0.75s ease-in-out 2.75s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 2.75s forwards;
+  animation: fadeOut 0.75s ease-in-out 2.75s forwards; 
 }
