--- a/2020/2020-12/2020-12-08/source/300x250_m.css
+++ b/2020/2020-12/2020-12-08/source/300x250_m.css
@@ -868,9 +868,23 @@
 .bg {
   background: url('./images/300x250_m_bg.jpg') no-repeat center center;
   background-size: 100% auto;
-  -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
-  animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+}
+.cta {
+  background: url('./images/300x250_m_cta.png') no-repeat center center;
+  background-size: 100% auto;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+}
+.ticket {
+  background: url('./images/300x250_m_ticket.png') no-repeat center center;
+  background-size: 100% auto;
+  -webkit-animation: fadeInUp 0.75s ease-in-out 0.75s forwards;
+  -moz-animation: fadeInUp 0.75s ease-in-out 0.75s forwards;
+  animation: fadeInUp 0.75s ease-in-out 0.75s forwards;
 }
 .head1 {
   background: url('./images/300x250_m_head1.png') no-repeat center center;
