--- a/2021/2021-02/2021-02-15/source/320x50.css
+++ b/2021/2021-02/2021-02-15/source/320x50.css
@@ -694,12 +694,49 @@
   }
 }
 
+/*-- zoom out and fade out --*/
+@-webkit-keyframes zoomOutAndFadeOut {
+  0%   {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: scale(1,1);
+  }
+  100% { 
+    visibility: visible;
+    opacity: 0;
+    -webkit-transform: scale(0.2, 0.2);
+  }
+}
+@-moz-keyframes zoomOutAndFadeOut {
+  0%   {
+    visibility: visible;
+    opacity: 1;
+    -moz-transform: scale(1,1);
+  }
+  100% { 
+    visibility: visible;
+    opacity: 0;
+    -moz-transform: scale(0.2, 0.2);
+  }
+}
+@keyframes zoomOutAndFadeOut {
+  0%   {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1,1);
+  }
+  100% { 
+    visibility: visible;
+    opacity: 0;
+    transform: scale(0.2, 0.2);
+  }
+}
 
 /*-- zoom out and fade in--*/
 @-webkit-keyframes zoomOutFadeIn {
   0%   {
     visibility: visible;
-    -webkit-transform: scale(1.15, 1.15);
+    -webkit-transform: scale(1.25, 1.25);
     opacity: 0;
   }
   100% { 
@@ -711,7 +748,7 @@
 @-moz-keyframes zoomOutFadeIn {
   0%   {
     visibility: visible;
-    -moz-transform: scale(1.15, 1.15);
+    -moz-transform: scale(1.25, 1.25);
     opacity: 0;
   }
   100% { 
@@ -723,7 +760,7 @@
 @keyframes zoomOutFadeIn {
   0%   {
     visibility: visible;
-    transform: scale(1.15, 1.15);
+    transform: scale(1.25, 1.25);
     opacity: 0;
   }
   100% { 
@@ -750,8 +787,8 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 300px;
-  height: 250px;
+  width: 320px;
+  height: 50px;
   display: block;
 }
 
@@ -790,172 +827,61 @@
   animation: hideContent 10ms ease-in-out 0s forwards; 
 }
 .bg {
-  background: url('./images/300x250_m_bg.png') no-repeat center center;
+  background: #fff;
   background-size: 100% auto;
 }
 .cta {
-  background: url('./images/300x250_m_cta.png') no-repeat center center;
+  background: url('./images/320x50_cta.png') no-repeat center center;
   background-size: 100% auto;
-  width: 245px;
-  height: 37px;
-  top: 200px;
-  left: 28px;
+  width: 104px;
+  height: 33px;
+  top: 9px;
+  left: 212px;
+}
+.logos {
+  background: url('./images/320x50_logos.png') no-repeat center center;
+  background-size: 100% auto;
+  width: 106px;
+  height: 44px;
+  top: 3px;
+  left: 6px;
+}
+.mask {
+  background: url('./images/320x50_mask.png') no-repeat center center;
+  background-size: 100% auto;
 }
 
-.content-wrapper.animation .bg {
+.content-wrapper.animation .cta, .content-wrapper.animation .bg, .content-wrapper.animation .mask {
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
-.content-wrapper.animation .cta {
-  -webkit-animation: fadeIn 0.75s ease-in-out 1s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 1s forwards;
-  animation: fadeIn 0.75s ease-in-out 1s forwards;
-}
-
-.image1 {
-  background: url('./images/300x250_m_image1.jpg') no-repeat center center;
-  background-size: 100% auto;
-}
-.image2 {
-  background: url('./images/300x250_m_image2.jpg') no-repeat center center;
-  background-size: 100% auto;
-}
-.image3 {
-  background: url('./images/300x250_m_image3.jpg') no-repeat center center;
-  background-size: 100% auto;
-}
-.image4 {
-  background: url('./images/300x250_m_image4.jpg') no-repeat center center;
-  background-size: 100% auto;
-}
-.image5 {
-  background: url('./images/300x250_m_image5.jpg') no-repeat center center;
-  background-size: 100% auto;
-}
-/*.discount1 {
-  background: url('./images/300x250_m_discount1.png') no-repeat center center;
-  background-size: 100% auto;
-  width: 56px;
-  height: 55px;
-  top: 8px;
-  left: 140px;
-}*/
-.logo1 {
-  background: url('./images/300x250_m_logo1.png') no-repeat center center;
-  background-size: 100% auto;
-  width: 124px;
-  height: 123px;
-  top: 36px;
-  left: 10px;
-}
-
-.logo5 {
-  background: url('./images/300x250_m_logo5.png') no-repeat center center;
-  background-size: 100% auto;
-  width: 169px;
-  height: 29px;
-  top: 13px;
-  left: 65px;
-}
-.date5 {
-  background: url('./images/300x250_m_date5.png') no-repeat center center;
-  background-size: 100% auto;
-  width: 216px;
-  height: 12px;
-  top: 58px;
-  left: 42px;
-}
-.header5 {
-  background: url('./images/300x250_m_header5.png') no-repeat center center;
-  background-size: 100% auto;
-  width: 200px;
-  height: 46px;
-  top: 91px;
-  left: 51px;
-}
-.text5 {
-  background: url('./images/300x250_m_text5.png') no-repeat center center;
-  background-size: 100% auto;
-  width: 183px;
-  height: 38px;
-  top: 155px;
-  left: 59px;
-}
-
-#frame1.animation .image1 {
-  -webkit-animation: fadeIn 0.75s ease-in-out 0.25s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 0.25s forwards;
-  animation: fadeIn 0.75s ease-in-out 0.25s forwards;
-}
-#frame1.animation .logo1 {
-  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
-  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
-}
-/*#frame1.animation .discount1 {
-  -webkit-animation: zoomOutFadeIn 0.5s ease-in-out 1s forwards;
-  -moz-animation: zoomOutFadeIn 0.5s ease-in-out 1s forwards;
-  animation: zoomOutFadeIn 0.5s ease-in-out 1s forwards;
-}*/
-#frame1.animation .image1-container {
-  -webkit-animation: fadeOut 0.5s ease-in-out 3s forwards;
-  -moz-animation: fadeOut 0.5s ease-in-out 3s forwards;
-  animation: fadeOut 0.5s ease-in-out 3s forwards;
-}
-#frame1.animation .image2 {
-  -webkit-animation: fadeIn 0.75s ease-in-out 3.25s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 3.25s forwards;
-  animation: fadeIn 0.75s ease-in-out 3.25s forwards;
-}
-#frame1.animation .image2-container {
-  -webkit-animation: fadeOut 0.5s ease-in-out 5.75s forwards;
-  -moz-animation: fadeOut 0.5s ease-in-out 5.75s forwards;
-  animation: fadeOut 0.5s ease-in-out 5.75s forwards;
-}
-#frame1.animation .image3 {
-  -webkit-animation: fadeIn 0.75s ease-in-out 6s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 6s forwards;
-  animation: fadeIn 0.75s ease-in-out 6s forwards;
-}
-#frame1.animation .image3-container {
-  -webkit-animation: fadeOut 0.5s ease-in-out 8.5s forwards;
-  -moz-animation: fadeOut 0.5s ease-in-out 8.5s forwards;
-  animation: fadeOut 0.5s ease-in-out 8.5s forwards;
-}
-#frame1.animation .image4 {
-  -webkit-animation: fadeIn 0.75s ease-in-out 8.75s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 8.75s forwards;
-  animation: fadeIn 0.75s ease-in-out 8.75s forwards;
-}
-#frame1.animation {
-  -webkit-animation: fadeOut 0.5s ease-in-out 11.25s forwards;
-  -moz-animation: fadeOut 0.5s ease-in-out 11.25s forwards;
-  animation: fadeOut 0.5s ease-in-out 11.25s forwards;
-}
-
-#frame2.animation .image5 {
-  -webkit-animation: fadeIn 0.75s ease-in-out 0.25s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 0.25s forwards;
-  animation: fadeIn 0.75s ease-in-out 0.25s forwards;
-}
-#frame2.animation .logo5, #frame2.animation .date5 {
+.content-wrapper.animation .logos {
   -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
   animation: fadeIn 0.75s ease-in-out 0.75s forwards;
 }
-#frame2.animation .header5 {
-  -webkit-animation: zoomOutFadeIn 0.75s ease-in-out 1.25s forwards;
-  -moz-animation: zoomOutFadeIn 0.75s ease-in-out 1.25s forwards;
-  animation: zoomOutFadeIn 0.75s ease-in-out 1.25s forwards;
+
+.frame1-image {
+  background: url('./images/320x50_image1.jpg') no-repeat center center;
+  background-size: 100% auto;
 }
-#frame2.animation .text5 {
-  -webkit-animation: fadeInUp 0.5s ease-in-out 1.75s forwards;
-  -moz-animation: fadeInUp 0.5s ease-in-out 1.75s forwards;
-  animation: fadeInUp 0.5s ease-in-out 1.75s forwards;
+.frame2-image {
+  background: url('./images/320x50_image2.jpg') no-repeat center center;
+  background-size: 100% auto;
 }
-#frame2.animation {
-  -webkit-animation: fadeOut 0.5s ease-in-out 4.25s forwards;
-  -moz-animation: fadeOut 0.5s ease-in-out 4.25s forwards;
-  animation: fadeOut 0.5s ease-in-out 4.25s forwards;
+.frame3-image {
+  background: url('./images/320x50_image3.jpg') no-repeat center center;
+  background-size: 100% auto;
+}
+
+.frame.animation .image {
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.25s forwards;
+}
+.frame.animation {
+  -webkit-animation: fadeOut 0.75s ease-in-out 3s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 3s forwards;
+  animation: fadeOut 0.75s ease-in-out 3s forwards;
 }
