--- a/2021/2021-03/2021-03-28_2/souce/v1/fr/300x250.css
+++ b/2021/2021-03/2021-03-28_2/souce/v1/fr/300x250.css
@@ -239,6 +239,14 @@
   bottom: 0px;
   right: 0px;
 }
+.cta {
+  background: url('./images/300x250_cta.png') no-repeat center center;
+  background-size: 100% auto;
+  width: 79px;
+  height: 20px;
+  top: 117px;
+  left: 9px;
+}
 
 .content-wrapper.animation .footer {
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
@@ -249,6 +257,11 @@
   -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
   animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+}
+.content-wrapper.animation .cta {
+  -webkit-animation: fadeIn 0.75s ease-in-out 1.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 1.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 1.5s forwards;
 }
 
 .image {
@@ -307,15 +320,6 @@
   left: 9px;
 }
 
-.cta {
-  background: url('./images/300x250_cta.png') no-repeat center center;
-  background-size: 100% auto;
-  width: 79px;
-  height: 20px;
-  top: 117px;
-  left: 9px;
-}
-
 .frame.animation .image {
   -webkit-animation: fadeIn 0.75s ease-in-out 0.15s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.15s forwards;
@@ -326,12 +330,12 @@
   -moz-animation: fadeInUp 0.75s ease-in-out 0.5s forwards;
   animation: fadeInUp 0.75s ease-in-out 0.5s forwards;
 }
-.frame.animation .cta {
-  -webkit-animation: fadeIn 0.75s ease-in-out 1s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 1s forwards;
-  animation: fadeIn 0.75s ease-in-out 1s forwards;
-}
 .frame.animation {
+  -webkit-animation: fadeOut 0.75s ease-in-out 3s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 3s forwards;
+  animation: fadeOut 0.75s ease-in-out 3s forwards;
+}
+#frame1.first-round.animation {
   -webkit-animation: fadeOut 0.75s ease-in-out 3.5s forwards;
   -moz-animation: fadeOut 0.75s ease-in-out 3.5s forwards;
   animation: fadeOut 0.75s ease-in-out 3.5s forwards;
